# epb-home-energy-model

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  bacon.toml  buildspec.yml  commit_template.txt  justfile  outputDec17_3.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
docs/adrs/: 001-PROPOSED-code structure.md
docs/landscape/: overview.md
examples/input/core/: SAP11_deck_flat_nat_vent.json  SAP11_deck_flat_nat_vent_with_window_opening_for_cooling.json  SAP11_deck_smart_hot_water_tank.json  demo.json  demo_168hrs_heat_battery.json  demo_168hrs_heat_battery_charge_calc_time_3.json  demo_168hrs_loadshifting_appliances.json  demo_168hrs_loadshifting_appliances_2_controls.json  demo_168hrs_loadshifting_appliances_flat_weights+limit_0.json  demo_24hrs_August.json  demo_24hrs_August_SolarThermal.json  demo_24hrs_August_SolarThermal_to_preheat.json  demo_24hrs_August_WWHRS.json  demo_24hrs_August_WWHRS_A.json  demo_24hrs_August_WWHRS_B.json  demo_24hrs_August_WWHRS_C.json  demo_24hrs_August_cost_minimising_time_ctrl.json  demo_24hrs_August_nearby_shading_obstacle.json  demo_24hrs_August_pvdiverter.json  demo_24hrs_August_pvdiverter_and_hp.json  demo_24hrs_August_pvdiverter_and_hp_smart_hot_water.json  demo_24hrs_August_remote_shading_objects.json  demo_24hrs_January.json  demo_24hrs_January_MVHR.json  demo_24hrs_January_MVHR_external.json  demo_24hrs_January_elec_storage_heater.json  demo_24hrs_January_esh.json  demo_24hrs_January_esh1.json  demo_24hrs_January_esh_automatic.json  demo_24hrs_January_esh_celect.json  demo_24hrs_January_esh_hhrsh.json  demo_24hrs_January_esh_manual.json  demo_24hrs_January_ieh.json  demo_24hrs_January_ieh_6_1kW.json  demo_24hrs_January_instant_elec_heater_comp.json  demo_24hrs_January_point_of_use.json  demo_3tanks_3hps.json  demo_combiBoiler.json  demo_combiBoilerLPG.json  demo_curtains_and_blinds.json  (+46 more)
examples/input/core/SAP11_deck_flat_nat_vent_with_window_opening_for_cooling__results/: SAP11_deck_flat_nat_vent_with_window_opening_for_cooling__core__results_static.csv  SAP11_deck_flat_nat_vent_with_window_opening_for_cooling__core__results_summary.csv
examples/input/core/demo_24hrs_August_WWHRS_A__results/: demo_24hrs_August_WWHRS_A.json
examples/input/core/demo__results/: demo__core__results.csv  demo__core__results_static.csv  demo__core__results_summary.csv
examples/input/core/long/: SAP11_deck_flat_nat_vent_with_window_opening_for_cooling.json  SAP11_deck_smart_hot_water_tank.json
examples/input/core/short/: demo.json  demo_168hrs_heat_battery.json  demo_168hrs_heat_battery_charge_calc_time_18_alternat_geometry.json  demo_eahp.json  (+79 more)
examples/tariff_data/: tariff_data_25-06-2024.csv
examples/weather_data/: London_weather_CIBSE_format.csv  London_weather_EnergyPlus_format.epw
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: build_corpus_from_input.rs  random_byte_input.rs
gui/: index.html
hem-core/: Cargo.toml
hem-lambda/: Cargo.toml
hem-lambda/src/: main.rs
schema-gen/: Cargo.toml
schema-gen/src/: main.rs
schema-gen/tests/: integration_test.rs
schemas/: core-input.schema.json  input.schema.json  input_core.schema.json
src/: compare_floats.rs  corpus.rs  errors.rs  external_conditions.rs  input.rs  input_dependency_resolvers.rs  lib.rs  main.rs  output.rs  output_writer.rs  read_weather_file.rs  simulation_time.rs  statistics.rs
src/core/: common.rs  ductwork.rs  material_properties.rs  mod.rs  pipework.rs  schedule.rs  solvers.rs  units.rs
src/core/controls/: mod.rs  time_control.rs
src/core/cooling_systems/: air_conditioning.rs  mod.rs  space_cool_system_base.rs
src/core/energy_supply/: elec_battery.rs  energy_supply.rs  inverter.rs  mod.rs  on_site_generation_base.rs  pv.rs  tariff_data.rs
src/core/heating_systems/: boiler.rs  common.rs  elec_storage_heater.rs  emitters.rs  heat_battery.rs  heat_battery_drycore.rs  heat_battery_pcm.rs  heat_network.rs  heat_pump.rs  instant_elec_heater.rs  mod.rs  point_of_use.rs  storage_tank.rs  wwhrs.rs
src/core/space_heat_demand/: building_element.rs  internal_gains.rs  mod.rs  thermal_bridge.rs  ventilation.rs  ventilation_element.rs  zone.rs
src/core/water_heat_demand/: bath.rs  cold_water_source.rs  dhw_demand.rs  misc.rs  mod.rs  other_hot_water_uses.rs  shower.rs
src/hem_core/: external_conditions.rs  mod.rs  simulation_time.rs
src/tests/: mod.rs  test_air_conditioning.rs  test_elec_battery.rs  test_energy_supply.rs  test_pv.rs  test_tariff_data.rs  test_time_control.rs
src/wrappers/: mod.rs
src/wrappers/future_homes_standard/: DEMO_variable_grid_model.csv  FHS_emisPEfactors_05-08-2024.csv  FHS_emisPEfactors_07-06-2023.csv  FHS_emisPEfactors_15-05-2024.csv  appliance_propensities.csv  day_of_week_events_by_decile.csv  decile_banding.csv  fhs_appliance.rs  fhs_compliance_response.rs  fhs_hw_events.rs  future_homes_standard.rs  future_homes_standard_fee.rs  future_homes_standard_notional.rs  mod.rs  test_future_homes_standard_notional_input_data.json
tests/: e2e.rs
weather/: uk_weather_example.epw
wrappers/: .gitignore  Cargo.toml
wrappers-lambda/: Cargo.toml
wrappers-lambda/src/: main.rs
wrappers/examples/input/future_homes_standard/: demo_FHS.json  demo_FHS_U_values.json  demo_FHS_bottomup_loadshifting.json  demo_FHS_heat_battery.json  demo_FHS_hp_with_advancedstart.json  demo_FHS_multiple_intermittent_MEV.json  demo_FHS_point_of_use_water_heating.json
wrappers/examples/tariff_data/: tariff_data_25-06-2024.csv  tariff_data_demo_files_24timesteps.csv
wrappers/src/: lib.rs  main.rs
wrappers/src/future_homes_standard/: cold_water_loss_profile.csv  day_of_week_events_by_decile.csv  day_of_week_events_by_decile_event_times.csv  decile_banding.csv  dry_metabolic_gains_profile_Wperm2.csv  evap_loss_profile.csv  fhs_appliance.rs  fhs_compliance_response.rs  fhs_hw_events.rs  future_homes_standard.rs  future_homes_standard_fee.rs  future_homes_standard_notional.rs  input.rs  mod.rs  test_future_homes_standard_notional_input_data.json
wrappers/wrappers-lambda/: Cargo.toml
(+926 files in other folders)
