[package]
name = "home-energy-model"
version = "1.0.0-alpha-1"
edition = "2021"
rust-version = "1.83.0"
description = "An engine written in Rust implementing the Home Energy Model (HEM), an energy performance of buildings model"

[dependencies]
anyhow = "1.0.101"
arbitrary = { version = "1.4.2", features = ["derive"], optional = true }
arc-swap = "1.8.0"
argmin = "0.11.0"
atomic_float = "1.1.0"
bounded-vec-deque = "0.1.1"
chrono = "0.4.43"
clap = { version = "4.5.58", features = ["derive"], optional = true }
convert_case = "0.11.0"
csv = "1.4.0"
derivative = "2.2.0"
erased-serde = "0.4.9"
field_types = "1.1.0"
format_num = "0.1.0"
formatx = "0.2.3"
fsum = "0.1.3"
indexmap = { version = "2.13.0", features = ["serde", "arbitrary"] }
indicatif = { version = "0.18.3", optional = true }
interp = "2.1.1"
is_close = "0.1.3"
itertools = "0.14.0"
jsonschema = "0.41.0"
monostate = "1.0.2"
nalgebra = "0.33.2"
ode_solvers = { version = "0.5.0", git = "https://github.com/russ-madetech/ode-solvers", branch = "events" }
ordered-float = "5.1.0"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision"] }
polyfit-rs = "0.2.2"
roots = "0.0.8"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde-enum-str = "0.5.0"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_repr = "0.1.20"
serde_with = { version = "3.15.1", features = ["json", "macros"] }
serde_valid = "2.0.1"
smartstring = { version = "1.0.1", features = ["arbitrary", "serde"] }
statrs = "0.18.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
approx = "0.5.1"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
walkdir = "2.5.0"

[lib]
# don't build doctests for now
doctest = false

[[bin]]
name = "hem"
path = "src/main.rs"
doc = false
required-features = ["clap"]

[profile.release]
opt-level = 3
lto = true

[workspace]
members = ["hem-lambda"]
