[package]
name = "home-energy-model"
version = "1.0.0-alpha-7"
edition = "2021"
rust-version = "1.86.0"
resolver = "3"
license-file = "LICENSE.md"
description = "An engine written in Rust implementing the Home Energy Model (HEM), an energy performance of buildings model"

[dependencies]
anyhow = "1.0.102"
arbitrary = { version = "1.4.2", features = ["derive"], optional = true }
arc-swap = "1.9.0"
argmin = "0.11.0"
atomic_float = "1.1.0"
bounded-vec-deque = "0.1.1"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"], optional = true }
convert_case = "0.11.0"
csv = "1.4.0"
derivative = "2.2.0"
eqsolver = "0.4.0"
erased-serde = "0.4.10"
field_types = "1.1.0"
formatx = "0.4.1"
fsum = "0.1.3"
indexmap = { version = "2.13.1", features = ["serde", "arbitrary"] }
indicatif = { version = "0.18.4", optional = true }
interp = "2.1.1"
is_close = "0.1.3"
itertools = "0.15.0"
jsonschema = "0.47.0"
monostate = "1.0.2"
nalgebra = "0.35.0"
ndarray = "0.17.2"
ordered-float = "5.3.0"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision"] }
petgraph = "0.8.3"
polyfit-rs = "0.2.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde-enum-str = "0.5.0"
serde_json = "1.0.150"
serde_repr = "0.1.20"
serde_with = { version = "3.21.0", features = ["json", "macros"] }
serde_valid = "2.0.1"
smartstring = { version = "1.0.1", features = ["arbitrary", "serde"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
approx = "0.5.1"
pretty_assertions = "1.4.1"
rayon = "1.12.0"
rstest = "0.26.1"
walkdir = "2.5.0"

[lib]
# don't build doctests for now
doctest = false

[[bin]]
name = "hem"
path = "src/main.rs"
doc = false
required-features = ["clap"]

[profile.release]
opt-level = 3
lto = true

[workspace]
members = ["hem-lambda"]
