[package]
name = "hem-lambda-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
anyhow = "1.0.89"

[dependencies.hem]
path = ".."
features = ["arbitrary"]

[[bin]]
name = "build_corpus_from_input"
path = "fuzz_targets/build_corpus_from_input.rs"
test = false
doc = false
bench = false

[workspace]

[[bin]]
name = "random_byte_input"
path = "fuzz_targets/random_byte_input.rs"
test = false
doc = false
bench = false
