[package]
name = "hem-lambda"
version = "0.34.0-alpha"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
hem = { path = ".." }
lambda_http = "1.0.1"
parking_lot = "0.12.5"
serde_json = "1.0.145"
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
