[package]
name = "hem-lambda"
version = "0.34.0-alpha"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
home-energy-model = { path = ".." }
lambda_http = "1.0.2"
parking_lot = "0.12.5"
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
