[package]
name = "hem-lambda"
version = "0.34.0-alpha"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
home-energy-model = { path = ".." }
lambda_http = "1.1.3"
parking_lot = "0.12.5"
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
