[package]
name = "wrappers"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
rayon = "1.11.0"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
indexmap = "2.12.0"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision"] }
smartstring = "1.0.1"
tracing = "0.1.41"
approx = "0.5.1"
partial_application = "0.2.1"
rstest = "0.26.1"
rand = "0.10.0-rc.0"
rand_distr = "0.5.1"
rand_mt = { version = "5.0.0", features = ["rand-traits"] }
rand_pcg = "0.9.0"
csv = "1.4.0"
strum = "0.27.2"
strum_macros = "0.27.0"
itertools = "0.14.0"
hem = { path = "..", features = ["fhs"] }
jsonschema = "0.33.0"
walkdir = "2.5.0"
serde_valid = "2.0.0"
clap = { version = "4.5.51", features = ["derive"], optional = true }
tracing-subscriber = "0.3.20"
thiserror = "2.0.17"

[[bin]]
name = "wrappers"
path = "src/main.rs"
doc = false
required-features = ["clap"]
