[package]
name = "wrappers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
approx = "0.5.1"
bitflags = "2.10.0"
clap = { version = "4.5.51", features = ["derive"], optional = true }
csv = "1.4.0"
hem = { path = "..", features = ["fhs"] }
indexmap = { version = "2.11.4", features = ["serde", "arbitrary"] }
itertools = "0.14.0"
jsonschema = "0.33.0"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision"] }
partial_application = "0.2.1"
rand = "0.9.1"
rand_distr = "0.5.1"
rand_mt = { version = "5.0.0", features = ["rand-traits"] }
rand_pcg = "0.9.0"
rayon = "1.11.0"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_valid = "2.0.0"
smartstring = "1.0.1"
strum = "0.27.1"
strum_macros = "0.27.0"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
walkdir = "2.5.0"

[lib]
# don't build doctests for now
doctest = false

[[bin]]
name = "wrappers"
path = "src/main.rs"
doc = false
required-features = ["clap"]

[features]
default = []
indicatif = ["hem/indicatif"]
