[package]
name = "wrappers-lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
wrappers = { path = ".." }
lambda_http = "0.17.0"
parking_lot = "0.12.5"
serde_json = "1.0.145"
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
